--- a/src/css/markrabey.css
+++ b/src/css/markrabey.css
@@ -265,8 +265,6 @@ h1 {
 h2 {
   font-size: 4rem;
   line-height: 1.2em;
-  letter-spacing: -1px;
-  text-indent: -2px;
 }
 h3 {
   font-size: 3.5rem;
@@ -328,8 +326,8 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid #efefef;
-  margin: 3.2em 0;
+  border-top: 1px solid #cccccc;
+  margin: 2em 0;
   padding: 0;
 }
 blockquote {
@@ -369,23 +367,29 @@ tt {
   font-family: Inconsolata, monospace, sans-serif;
   font-size: 0.85em;
   white-space: pre-wrap;
-  border: 1px solid #E3EDF3;
-  background: #F7FAFB;
+  border: 1px solid #cccccc;
+  background: #efefef;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -o-border-radius: 2px;
   border-radius: 2px;
 }
 pre {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 1.6em 0;
-  border: 1px solid #E3EDF3;
+  border: 1px solid #cccccc;
   width: 100%;
   padding: 10px;
   font-family: Inconsolata, monospace, sans-serif;
-  font-size: 0.9em;
+  font-size: 0.85em;
   white-space: pre;
   overflow: auto;
-  background: #F7FAFB;
-  border-radius: 3px;
+  background: #efefef;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
 }
 pre code,
 tt {
