--- a/src/less/markrabey.less
+++ b/src/less/markrabey.less
@@ -52,8 +52,8 @@ h1 {
 h2 {
     font-size: 4rem;
     line-height: 1.2em;
-    letter-spacing: -1px;
-    text-indent: -2px;
+    // letter-spacing: -1px;
+    // text-indent: -2px;
 }
 
 h3 {
@@ -118,8 +118,8 @@ hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 1px solid @gray-lighter;
-    margin: 3.2em 0;
+    border-top: 1px solid @gray;
+    margin: 2em 0;
     padding: 0;
 }
 
@@ -159,24 +159,24 @@ code, tt {
     font-family: Inconsolata, monospace, sans-serif;
     font-size: 0.85em;
     white-space: pre-wrap;
-    border: 1px solid #E3EDF3;
-    background: #F7FAFB;
-    border-radius: 2px;
+    border: 1px solid @gray;
+    background: @gray-lighter;
+    .border-radius(2px);
 }
 
 pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 1.6em 0;
-    border: 1px solid #E3EDF3;
+    border: 1px solid @gray;
     width: 100%;
     padding: 10px;
     font-family: Inconsolata, monospace, sans-serif;
-    font-size: 0.9em;
+    font-size: 0.85em;
     white-space: pre;
     overflow: auto;
-    background: #F7FAFB;
-    border-radius: 3px;
+    background: @gray-lighter;
+    .border-radius(4px);
 }
 
 pre code, tt {
