--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -74,3 +74,10 @@
 	-o-box-sizing: @type;
 	box-sizing: @type;
 }
+
+.position(@top,@right,@bottom,@left) {
+	top: @top;
+	right: @right;
+	bottom: @bottom;
+	left: @left;
+}
