--- a/src/less/markrabey.less
+++ b/src/less/markrabey.less
@@ -286,23 +286,33 @@ margin on the iframe, cause it breaks stuff. */
 
 /* Container */
 #page{
-    /*max-width: 990px;*/
-    margin: 0 auto;
+    // width: 70%;
+    float: right;
+    margin-left: 30%;
     background: @white;
 }
 
 #page .content {
-    max-width: 800px;
+    // max-width: 800px;
+    // width: 70%;
     margin: auto;
     padding:0 25px;
 }
 /* Big cover image on the home page */
 .site-head {
-    position: relative;
     display: table;
-    width: 100%;
-    height: 60%;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    float: left;
+    height: 100%;
+    width: 30%;
     margin-bottom: 5rem;
+    .site-head-content {
+        // display: table-cell;
+        z-index: 800;
+        
+    }
     text-align: center;
     a {
         color: @white;
@@ -311,22 +321,31 @@ margin on the iframe, cause it breaks stuff. */
             text-decoration: none;
         }
     }
-    &:after {
-        content: "";
-        pointer-events: none;
+
+    .social-icons {
+        ul {
+            list-style-type: none;
+            padding: 0;
+            li {
+                display: inline-block;
+                font-size: 5rem;
+                width: 20%;
+            }
+        }
+    }
+    .header-overlay {
         display: block;
-        position: absolute; /* could also be absolute */
-        top: 0;
-        left: 0;
+        position: absolute;
+        z-index: 0;
+        .position(0,0,0,0);
         height: 100%;
-        width: 100%;
-        z-index: 10;
-        .background-color(@black,0.2);
+        .background-color(#373737,0.75);
     }
 }
 
 .blog-logo {
     text-decoration: none;
+    margin-top: 10px;
     img {
         max-height: 100px;
         width: auto;
@@ -336,7 +355,7 @@ margin on the iframe, cause it breaks stuff. */
 
 /* The details of your blog. Defined in ghost/settings/ */
 .blog-title {
-    margin: 10px 0 10px 0;
+    margin: 10px;
     font-size: 5rem;
     font-weight: bold;
     font-family: 'helvetica', arial, sans-serif;
@@ -567,16 +586,16 @@ margin on the iframe, cause it breaks stuff. */
 ========================================================================== */
 
 .site-footer {
-    position: relative;
-    margin: 8rem 0 0 0;
-    padding: 4rem 0;
-    border-top: #ccc 1px solid;
-    font-family: 'helvetica', arial, sans-serif;
+    position: absolute;
+    bottom: 0;
+    margin: 8rem 0 0;
+    padding: 2rem 0;
+    width: 100%;
+    font-family: 'helvetica',arial,sans-serif;
     font-size: 1.3rem;
     line-height: 1.7em;
-    color: #333;
-    text-align: center;
-    background: #fff;
+    color: @gray-lighter;
+    background-color: @black;;
     a {
         font-weight: 700;
     }
@@ -606,12 +625,25 @@ margin on the iframe, cause it breaks stuff. */
     blockquote {
         margin-left: 0;
     }
+    
+    // #page {
+    //     width: 80%;
+    //     margin: 0 20%;
+    // }
 
     .site-head {
         .box-sizing(border-box);
-        height: auto;
-        min-height: 240px;
+        // width: 20%;
         padding: 15% 0;
+        .social-icons {
+            ul {
+                li {
+                    display: block;
+                    margin: 10px auto;
+                    width: auto;
+                }
+            }
+        }
     }
 
     .blog-title {
