--- a/src/less/markrabey.less
+++ b/src/less/markrabey.less
@@ -524,7 +524,7 @@ margin on the iframe, cause it breaks stuff. */
 ========================================================================== */
 
 .archive-template .site-head {
-    height: auto;
+    // nothing changes...yet....
 }
 
 
