Added wrapper, but it's broken still...I just need the code here so I can go home.

--- a/src/css/markrabey.css
+++ b/src/css/markrabey.css
@@ -335,7 +335,6 @@ blockquote {
   -moz-box-sizing: border-box;
   -o-box-sizing: border-box;
   box-sizing: border-box;
-  margin: 1.6em 0 1.6em -2.2em;
   padding: 0 0 0 1.6em;
   border-left: #777777 0.4em solid;
 }
@@ -496,10 +495,14 @@ margin on the iframe, cause it breaks stuff. */
 /* ==========================================================================
     General - The main styles for the the theme
 ========================================================================== */
+#wrapper {
+  height: 100%;
+  width: 100%;
+}
 /* Container */
 #page {
+  width: 70%;
   float: right;
-  margin-left: 30%;
   background: #ffffff;
 }
 #page .content {
@@ -508,8 +511,6 @@ margin on the iframe, cause it breaks stuff. */
 }
 /* Big cover image on the home page */
 .site-head {
-  display: table;
-  position: fixed;
   top: 0;
   bottom: 0;
   float: left;
@@ -680,11 +681,6 @@ margin on the iframe, cause it breaks stuff. */
   margin: 0 auto;
   padding: 0.6em 0;
 }
-.post-content .full-img {
-  width: 126%;
-  max-width: none;
-  margin: 0 -13%;
-}
 /* The author credit area after the post */
 .post-footer {
   position: relative;
@@ -756,8 +752,6 @@ margin on the iframe, cause it breaks stuff. */
     Footer - The bottom of every page
 ========================================================================== */
 .site-footer {
-  position: absolute;
-  bottom: 0;
   margin: 8rem 0 0;
   padding: 2rem 0;
   width: 100%;
@@ -766,9 +760,15 @@ margin on the iframe, cause it breaks stuff. */
   line-height: 1.7em;
   color: #efefef;
   background-color: #222222;
+  text-align: center;
+  clear: both;
 }
 .site-footer a {
-  font-weight: 700;
+  color: #ffffff;
+}
+.site-footer a:hover {
+  color: #e25440;
+  text-decoration: none;
 }
 .poweredby .icon-ghost {
   font-weight: 700;
