--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -17,6 +17,8 @@
 @gray-lightest: #f8f8f8;
 @white: #fff;
 
-@base-font-color: @gray-darker;
+@base-font-color: @gray-darkest;
 @base-link-color: #e25440;
 @base-link-hover-color: darken(@base-link-color,15%);
+
+@primary-font-family: 'Open Sans', sans-serif;
