--- a/src/less/markrabey.less
+++ b/src/less/markrabey.less
@@ -285,26 +285,38 @@ margin on the iframe, cause it breaks stuff. */
 /* Big cover image on the home page */
 .site-head {
     position: relative;
-    display: table;
     width: 100%;
     height: 500px;
     margin-bottom: 6rem;
     text-align: center;
     color: @white;
-    background: #2B2B2B no-repeat center center;
+    background: @base-link-color no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
+    .site-head-content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: table;
+        .background-color(@black,0.5);
+
+    }
+    
     &.post-head {
         background: @white;
         margin-bottom: 5rem;
         height: 300px;
-        .site-head-content .blog-title {
-            margin: 3.5rem 0;
-            a {
-                color: @gray-darkest;
-                text-shadow: none;
+        .site-head-content {
+            .blog-title {
+                margin: 3.5rem 0;
+                a {
+                    color: @gray-darkest;
+                    text-shadow: none;
+                }
             }
-        }
+        } 
     }
 }
 
