--- a/src/less/markrabey.less
+++ b/src/less/markrabey.less
@@ -32,6 +32,7 @@ body {
 
 ::selection {
     text-shadow: none;
+    background-color: lighten(@base-link-color, 25%);
 }
 
 h1, h2, h3,
@@ -586,7 +587,7 @@ margin on the iframe, cause it breaks stuff. */
         display: table;
         border-spacing: 20px 0;
         border-collapse: separate;
-        margin: 0 auto;
+        margin: 0 auto 15px auto;
         position: relative;
         padding: 0;
         li {
